<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="android.text.Html" />

        <import type="androidx.navigation.Navigation" />

        <variable
            name="exercise"
            type="ru.lissdev.sportnote.data.model.ExerciseDetails" />

        <variable
            name="vm"
            type="ru.lissdev.sportnote.databinding.viewmodels.SavedExercisesViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.processDetails(details, indicator) }"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/indicator"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/svg_button_down" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{exercise.name}"
                android:textSize="20sp"
                tools:text="Заголовок поля" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{exercise.category.name}"
                    android:textSize="18sp"
                    tools:text="Группа мышц" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exercise_details_equipment_title"
                    android:visibility="@{exercise.equipment.size() > 0 ? View.VISIBLE : View.GONE}" />

                <androidx.recyclerview.widget.RecyclerView
                    app:itemBinding="@{vm.equipmentBinding}"
                    app:items="@{exercise.equipment}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:visibility="@{exercise.equipment.size() > 0 ? View.VISIBLE : View.GONE}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exercise_details_muscles_title"
                    android:visibility="@{exercise.muscles.size() > 0 ? View.VISIBLE : View.GONE}" />

                <androidx.recyclerview.widget.RecyclerView
                    app:itemBinding="@{vm.musclesBinding}"
                    app:items="@{exercise.muscles}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:visibility="@{exercise.muscles.size() > 0 ? View.VISIBLE : View.GONE}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exercise_details_secondary_muscles_title"
                    android:visibility="@{exercise.muscles_secondary.size() > 0 ? View.VISIBLE : View.GONE}" />

                <androidx.recyclerview.widget.RecyclerView
                    app:itemBinding="@{vm.musclesBinding}"
                    app:items="@{exercise.muscles_secondary}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:visibility="@{exercise.muscles_secondary.size() > 0 ? View.VISIBLE : View.GONE}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text='@{Html.fromHtml(exercise.description != null ? exercise.description : "")}'
                    android:textIsSelectable="true" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:background="#ccc" />

    </LinearLayout>
</layout>